--- a/package.json
+++ b/package.json
@@ -9,16 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.12",
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@stream-io/node-sdk": "^0.4.19",
+    "@stream-io/video-react-sdk": "^1.12.11",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.21.0",
+    "framer-motion": "^12.9.2",
+    "lucide-react": "^0.485.0",
+    "next": "14.2.23",
+    "next-themes": "^0.4.6",
     "react": "^18",
+    "react-avatar": "^5.0.3",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18",
-    "next": "14.2.23"
+    "react-hot-toast": "^2.5.2",
+    "react-resizable-panels": "^2.1.7",
+    "react-scroll-area": "^0.1.2",
+    "react-select": "^5.10.1",
+    "react-switch": "^7.1.0",
+    "svix": "^1.62.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
